[gd_scene load_steps=7 format=3 uid="uid://cey51g3yen7q4"]

[ext_resource type="Theme" uid="uid://co08a2cr03n28" path="res://resources/main_theme.tres" id="1_ji6jw"]
[ext_resource type="Script" path="res://scenes/main.gd" id="2_1wpq2"]
[ext_resource type="Script" path="res://scenes/main/timer_container.gd" id="3_orcfm"]
[ext_resource type="PackedScene" uid="uid://bek72t2lcaiq2" path="res://scenes/create_timer_popup.tscn" id="4_iqcrf"]
[ext_resource type="Script" path="res://resources/thing_loader.gd" id="5_cl4aq"]
[ext_resource type="Script" path="res://scenes/main/notes_container.gd" id="5_yj3m0"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ji6jw")
script = ExtResource("2_1wpq2")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4
metadata/_edit_use_anchors_ = true

[node name="TimersContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer" node_paths=PackedStringArray("thing_loader")]
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
script = ExtResource("3_orcfm")
thing_loader = NodePath("../../../../ThingLoader")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/TimersContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/TimersContainer/HBoxContainer"]
layout_mode = 2
text = "Taimerid"
horizontal_alignment = 1

[node name="CreateTimerButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/TimersContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "+"

[node name="CreateTimerPopup" parent="Panel/MarginContainer/HBoxContainer/TimersContainer/HBoxContainer/CreateTimerButton" instance=ExtResource("4_iqcrf")]
unique_name_in_owner = true
visible = false

[node name="Panel" type="Panel" parent="Panel/MarginContainer/HBoxContainer/TimersContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer/TimersContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/HBoxContainer/TimersContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="TimerContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/TimersContainer/Panel/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="NotesContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer" node_paths=PackedStringArray("thing_loader") groups=["_save_me"]]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
script = ExtResource("5_yj3m0")
thing_loader = NodePath("../../../../ThingLoader")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/NotesContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/NotesContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/NotesContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "MÃ¤rkmed"

[node name="CreateNoteButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/NotesContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "+
"

[node name="WidthSlider" type="HSlider" parent="Panel/MarginContainer/HBoxContainer/NotesContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 120.0
max_value = 460.0
value = 120.0
scrollable = false

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer/NotesContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer/NotesContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/HBoxContainer/NotesContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="NoteContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/NotesContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ThingLoader" type="Node" parent="."]
script = ExtResource("5_cl4aq")
